--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
    header{
-          background:blue;
+          background:red ;
           color: white;
           text-align: center;
           padding: 17px;
