first commit with index, style, script folder

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
           color: white;
           margin: 20px;
           font-size:large;
+          background-color: brown;
         }
 
   main {
